[gd_scene load_steps=9 format=2]

[ext_resource path="res://actors/player/player.gd" type="Script" id=1]
[ext_resource path="res://actors/player/Camera.gd" type="Script" id=2]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 2.5

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.992157, 1, 0.184314, 1 )

[sub_resource type="PrismMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CapsuleShape" id=4]
height = 2.5

[sub_resource type="CubeMesh" id=3]
size = Vector3( 1, 0.5, 0.5 )

[node name="Player" type="KinematicBody"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( -1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 2.25, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Hat" type="MeshInstance" parent="Body"]
transform = Transform( -3.49691e-08, -3.49691e-08, 0.8, -0.8, -3.49691e-08, -3.49691e-08, 3.49691e-08, -0.8, -3.49691e-08, 0, -1.09278e-07, -2.5 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2.25, 0 )
shape = SubResource( 4 )

[node name="Camera" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 2 )

[node name="HorizontalController" type="Spatial" parent="Camera"]

[node name="VerticalController" type="Spatial" parent="Camera/HorizontalController"]

[node name="Eyes" type="MeshInstance" parent="Camera/HorizontalController/VerticalController"]
transform = Transform( 1, 0, 0, 0, -2.98023e-08, 1, 0, -1, -2.98023e-08, 0, 5.42342, 8.943 )
mesh = SubResource( 3 )
skeleton = NodePath("../../../../Body")
material/0 = null

[node name="ClippedCamera" type="ClippedCamera" parent="Camera/HorizontalController/VerticalController/Eyes"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -5.68434e-14, 4.76837e-07, 0 )
far = 1200.0

[node name="mouse_control_start_delay" type="Timer" parent="Camera"]
